--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title> Free Fire Character Holding a Crown 👑</title>
 <link rel="icon" type"image/png"
-href="D:\Programming\HTML\Official\Ai Prompt\Prompt 2\Picsart_23-07-16_22-01-21-756~3.png - Copy.jpg">
+href="icon.png">
 </head>
 <body bgcolor="black">
 <h1 Align="center"><b><u>Free Fire Character Sitting on a Back of Lamborgini Car</b></u></h1>
@@ -37,3 +37,4 @@ Important : not change the dress</p>
 <address> © Copyright 2021 - 2025, Kacker Gamer Zone </address>
 </body>
 </html>
+
