--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" type"image/png"
 href="icon.png">
 </head>
-<body bgcolor="black">
+<body>
 <h1 Align="center"><b><u>Free Fire Character Sitting on a Back of Lamborgini Car</b></u></h1>
 <br>
 <h2 align="center"><b>⬇⬇⬇ Scroll Down for Prompt ⬇⬇⬇ </b></h2>
@@ -37,4 +37,5 @@ Important : not change the dress</p>
 <address> © Copyright 2021 - 2025, Kacker Gamer Zone </address>
 </body>
 </html>
+
 
